--- a/src/index.css
+++ b/src/index.css
@@ -179,3 +179,14 @@ body,
   padding-left: 50px;
   padding-right: 50px;
 }
+
+@media (max-width: 768px) {
+  .nav-link {
+    display: none !important; /* Oculta los enlaces en pantallas pequeñas */
+  }
+
+  #img-logo{
+    width: 120px !important;
+  }
+
+}
