--- a/src/index.css
+++ b/src/index.css
@@ -53,23 +53,7 @@ body,
 }
 
 .text-primary {
-  color: var(--secondary-color) !important;
-  letter-spacing: 6px;
-  position: relative;
-}
-
-.separator {
-  text-align: center; /* Center align the h2 and the line */
-  display: inline-block; /* Ensure the line matches the h2 width */
-}
-
-.separator::after {
-  content: '';
-  display: inline-block;
-  width: 100%; /* Matches the width of the h2 text */
-  height: 2px; /* Height of the separator */
-  background-color: var(--secondary-color); /* Same color as text */
-  position: relative;
+  color: var(--primary-color) !important;
 }
 
 .btn-primary {
@@ -163,23 +147,6 @@ body,
 .btn-banca:hover {
   background-color: var(--secondary-color);
 }
-
-/* Add margin between each list item */
-.custom-nav-item {
-  margin-right: 50px;
-}
-
-/* Adjust the size of the Banca en Línea button */
-.custom-banking-btn {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.custom-send-btn {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
 @media (max-width: 768px) {
   .nav-link {
     display: none !important; /* Oculta los enlaces en pantallas pequeñas */
