--- a/src/components/institucional/servicios.css
+++ b/src/components/institucional/servicios.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .imageContainer {
   position: relative;
-  width: 100%; /* Asegúrate de que el contenedor tenga el mismo ancho que la imagen */
-  overflow: hidden; /* Evitar que cualquier elemento hijo sobresalga del contenedor */
+  width: 100%;
+  overflow: hidden; 
   height: 100%;
-  cursor: pointer; /* Cambiar a puntero al pasar el cursor */
+  cursor: pointer; 
 }
 
 .im-end {
@@ -12,9 +14,9 @@
 
 .imageContainer img {
   width: 100%;
-  height: 100% !important; /* Asegura que la imagen ocupe todo el contenedor */
-  object-fit: cover; /* Ajusta cómo se escala la imagen para ocupar el contenedor sin distorsionarse */
-  display: block; /* Evita el espacio en la parte inferior de la imagen */
+  height: 100% !important;
+  object-fit: cover; 
+  display: block; 
 }
 
 .container-responsive img {
@@ -25,8 +27,15 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centrando el texto */
-  color: white; /* Cambiar el color según sea necesario */
-  border-radius: 5px; /* Bordes redondeados si lo deseas */
-  text-align: center; /* Centrado del texto */
+  transform: translate(-50%, -50%) scale(1); /* Iniciar en su tamaño normal */
+  color: white; 
+  border-radius: 5px; 
+  text-align: center; 
+  transition: transform 0.5s ease, top 0.5s ease; /* Transición para el escalado */
+  font-family: 'Roboto', sans-serif; /* Aplicar la fuente Roboto */
+}
+
+.imageContainer:hover .imageText {
+  transform: translate(-50%, -70%) scale(1.2); /* Elevar y escalar en hover */
+  top: 40%; /* Ajusta para elevar el texto durante el hover */
 }
